force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt.object-meta.xml
<CustomObject>
    <description>Define what payment gateway system is preferred when processing transactions</description>
    <label>Gift Processing External Pymnt Gateway</label>
    <pluralLabel>Gift Processing External Pymnt Gateway</pluralLabel>
</CustomObject>