force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Automated_Payment_Retry_Maximum__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Automated_Payment_Retry_Maximum__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The maximum number of times a failed automated payment can be retried</description>
    <inlineHelpText>The maximum number of times a failed automated payment can be retried</inlineHelpText>
    <label>Automated Payment Retry Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>