force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Automated_Payment_Retry_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Automated_Payment_Retry_Weekdays__c</fullName>
    <description>Dictates the days of the week that automated payments are allowed to commence on. Represented as a JSON list of weekday names.</description>
    <inlineHelpText>Dictates the days of the week that automated payments are allowed to commence on. Represented as a JSON list of weekday names.</inlineHelpText>
    <label>Automated Payment Retry Weekdays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>