force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Certificate_Name__c</fullName>
    <description>The &quot;unique name&quot; of a Certificate uploaded to Salesforce, matching the Public Key on this custom metadata record.

Setup &gt; Security &gt; Certificate and Key Management</description>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>