force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Currency_Code__c</fullName>
    <description>Define the Currency Type when processing transactions</description>
    <label>Currency Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>