force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Currency_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Currency_Decimal_Places__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Currency Decimal Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>