force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Daily_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Daily_Report_Name__c</fullName>
    <description>Name of report to retrieve daily.</description>
    <inlineHelpText>Name of report to retrieve daily.</inlineHelpText>
    <label>Daily Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>