force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Email_Reporting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Reporting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables email reporting on automated recurring gift/installment payment processing jobs.</description>
    <inlineHelpText>Enables email reporting on automated recurring gift/installment payment processing jobs.</inlineHelpText>
    <label>Email Reporting</label>
    <type>Checkbox</type>
</CustomField>