force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Email_Reporting_Primary_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Reporting_Primary_Recipient__c</fullName>
    <description>If Email Reporting is enabled, reports will be sent TO this email address.

Example value:

example@example.com</description>
    <inlineHelpText>If Email Reporting is enabled, reports will be sent TO this email address.

Example value:

example@example.com</inlineHelpText>
    <label>Email Reporting Primary Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>