force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Email_Reporting_ReplyTo_Address__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Reporting_ReplyTo_Address__c</fullName>
    <description>If email reporting is enabled, this value will be used as the ReplyTo address for reports.</description>
    <inlineHelpText>If email reporting is enabled, this value will be used as the ReplyTo address for reports.</inlineHelpText>
    <label>Email Reporting ReplyTo Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>