force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Endpoint_Key__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Endpoint_Key__c</fullName>
    <description>Endpoint Key Custom Setting</description>
    <inlineHelpText>Stores the name of the custom setting record for the endpoint key.</inlineHelpText>
    <label>Endpoint Key Custom Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>