force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Environment_Key__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Environment_Key__c</fullName>
    <description>A key mapping to a specific Spreedly environment.</description>
    <inlineHelpText>A key mapping to a specific Spreedly environment.</inlineHelpText>
    <label>Environment Key (DEPRECATED)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>