force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Gateway_Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gateway_Named_Credential_Name__c</fullName>
    <description>The name of the Named Credential that contains the Endpoint and authorization data to submit transactions</description>
    <label>Gateway Named Credential Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>