force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Is_Retrieve_Orphan_Payments_V2_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Retrieve_Orphan_Payments_V2_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow creation of orphan payment rtv2 records for reporting if they do not have a matching opportunity.</description>
    <inlineHelpText>Allow creation of orphan payment rtv2 records for reporting if they do not have a matching opportunity.</inlineHelpText>
    <label>Is Retrieve Orphan Payments V2 Enabled</label>
    <type>Checkbox</type>
</CustomField>