force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Merchant_Defined_Data_Field_Index__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Merchant_Defined_Data_Field_Index__c</fullName>
    <description>Merchant defined data field to send payment transaction type to cybersource. Only payments made through ascend GP will have the transaction type sent through this defined field. Leave blank to not send transaction type</description>
    <inlineHelpText>Merchant defined data field to send payment transaction type to cybersource. Leave blank to not send transaction type.</inlineHelpText>
    <label>Merchant Defined Data Field Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>