force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Merchant_ID__c</fullName>
    <description>Currently used by Cybersource to delineate between customers.</description>
    <inlineHelpText>Currently used by Cybersource to delineate between customers.</inlineHelpText>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>