force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Number_Of_Previous_Failure_Retries__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_Of_Previous_Failure_Retries__c</fullName>
    <description>Specifies the number of days previous to the original report date where batch failures will be retried up to.</description>
    <inlineHelpText>Specifies the number of days previous to the original report date where batch failures will be retried up to.</inlineHelpText>
    <label>Number Of Previous Failure Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>