force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CyberSource</fullName>
                <default>true</default>
                <label>CyberSource</label>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Spreedly</fullName>
            </value>
            <value>
                <fullName>TouchNet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>