force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Public_Key__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Public_Key__c</fullName>
    <description>Base64 representation of a certificate public key. Should begin look something like:

-----BEGIN CERTIFICATE-----
&lt;CONTENTS&gt;
-----END CERTIFICATE-----

This public key is used by the external payment gateway to verify messages &quot;received&quot; from ascend were actually sent by ascend.</description>
    <label>Certificate Public Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>