force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Public_Key_Custom_Setting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Public_Key_Custom_Setting__c</fullName>
    <description>Public Key Custom Setting</description>
    <inlineHelpText>Stores the name of the custom setting record for the public key.</inlineHelpText>
    <label>Public Key Custom Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>