force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Report_Batch_Hour_Differential__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Report_Batch_Hour_Differential__c</fullName>
    <description>How many hours after end of day will this report run. Necessary for us to retrieve reports from the correct date.</description>
    <inlineHelpText>How many hours after end of day will this report run. Necessary for us to retrieve reports from the correct date.</inlineHelpText>
    <label>Report Batch Hour Differential</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>