force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Reporting_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reporting_Batch_Size__c</fullName>
    <description>Specifies the batch size for fetching reports from the external payment gateway, and creating review transactions.</description>
    <inlineHelpText>Specifies the batch size for fetching reports from the external payment gateway, and creating review transactions.</inlineHelpText>
    <label>Reporting Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>