force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Reporting_Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reporting_Named_Credential_Name__c</fullName>
    <description>Credential prefix used for the reporting API.</description>
    <inlineHelpText>Credential prefix used for the reporting API.</inlineHelpText>
    <label>Reporting Credential Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>