force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Retry_Failed_Report_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Retry_Failed_Report_Retrieval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Each time the report retrieval batch runs, it will retry report retrievals that failed previously, up to a cap.</description>
    <inlineHelpText>Each time the report retrieval batch runs, it will retry report retrievals that failed previously, up to a cap.</inlineHelpText>
    <label>Retry Failed Report Retrieval</label>
    <type>Checkbox</type>
</CustomField>