force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Review_Transaction_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction_Record_Type__c</fullName>
    <description>Record type API name of review transactions created when retrieving transactions from this payment gateway.</description>
    <inlineHelpText>Record type API name of review transactions created when retrieving transactions from this payment gateway.</inlineHelpText>
    <label>Review Transaction Record Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>