force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Review_Transaction_Record_Type_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction_Record_Type_Namespace__c</fullName>
    <description>Namespace of review transaction record type.</description>
    <inlineHelpText>Namespace of review transaction record type.</inlineHelpText>
    <label>Review Transaction Record Type Namespace</label>
    <length>25</length>
    <type>Text</type>
</CustomField>