force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Review_Transaction_Record_Type_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction_Record_Type_Prefix__c</fullName>
    <description>Either populate this field or the Review Transaction Record Type/Review Transaction Record Type Namespace field pair. Allows one to specify the default record type for review transactions incoming from the external payment gateway.</description>
    <inlineHelpText>Either populate this field or the Review Transaction Record Type/Review Transaction Record Type Namespace field pair. Allows one to specify the default record type for review transactions incoming from the external payment gateway.</inlineHelpText>
    <label>Review Transaction Record Type Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>