force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Transaction_Timeout_Limit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Timeout_Limit__c</fullName>
    <defaultValue>60</defaultValue>
    <description>The time in seconds to wait for a response from the payment processor. The minimum is 1 second and the maximum is 120 seconds.</description>
    <inlineHelpText>The time in seconds to wait for a response from the payment processor. The minimum is 1 second and the maximum is 120 seconds.</inlineHelpText>
    <label>Transaction Timeout Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>