force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__UPay_Site_ID_Key__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__UPay_Site_ID_Key__c</fullName>
    <description>TouchNet UPay Site ID Key</description>
    <inlineHelpText>TouchNet&apos;s Unique identifier assigned to each uPay site within the TouchNet system</inlineHelpText>
    <label>UPay Site ID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>