force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Update_Payment_Summary_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Update_Payment_Summary_Batch_Size__c</fullName>
    <description>Specifies batch size to update giving summary after retrieving reports and creating review transactions.</description>
    <inlineHelpText>Specifies batch size to update giving summary after retrieving reports and creating review transactions.</inlineHelpText>
    <label>Update Payment Summary Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>