force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__Use_Reporting_V2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Reporting_V2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use reporting V2 as opposed to V1.</description>
    <inlineHelpText>Use reporting V2 as opposed to V1.</inlineHelpText>
    <label>Use Reporting V2</label>
    <type>Checkbox</type>
</CustomField>