force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_External_Pymnt_Gateways__mdt/fields/ucinn_ascendv2__WSDL_Version__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__WSDL_Version__c</fullName>
    <description>The latest version of CyberSource Web Service Definition Language</description>
    <label>WSDL Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>